Final working version..

--- a/src/main/resources/META-INF/spring/database.properties
+++ b/src/main/resources/META-INF/spring/database.properties
@@ -1,6 +1,6 @@
-#Updated at Sat Apr 28 12:22:02 CDT 2012
-#Sat Apr 28 12:22:02 CDT 2012
-database.driverClassName=org.hsqldb.jdbcDriver
-database.url=jdbc\:hsqldb\:mem\:seis635ClassProject
-database.username=sa
-database.password=
+#Updated at Sat Apr 28 14:26:51 CDT 2012
+#Sat Apr 28 14:26:51 CDT 2012
+database.driverClassName=net.sourceforge.jtds.jdbc.Driver
+database.url=jdbc\:jtds\:sqlserver\://localhost\:1433/ChessRoo
+database.username=ChessRoo
+database.password=ChessRoo
