--- a/pom.xml
+++ b/pom.xml
@@ -311,9 +311,9 @@
             <version>1.0.0.GA</version>
         </dependency>
         <dependency>
-            <groupId>org.hsqldb</groupId>
-            <artifactId>hsqldb</artifactId>
-            <version>1.8.0.10</version>
+            <groupId>net.sourceforge.jtds</groupId>
+            <artifactId>jtds</artifactId>
+            <version>1.2.4</version>
         </dependency>
     </dependencies>
     <build>
